--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-qr-barcode-scanner": "^1.0.6"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
